css/mobile.css
/*****************   General CSS Rules  *************/
a {text-decoration: none; color: none}

* {
  margin: 0px;
  padding: 0px;
}

br {
  display: none;
}
.clearfix {
  overflow: auto;
  content:" ";
  display:block;
  clear:both;
}

body {
  padding: 0px;
  margin: 0px;
  width: 100%;
  height: auto;
  position: absolute;
}

.black {
  background-color: black;
}

.padding {
  height: auto;
  padding-top: 20px;
}

.height {
  width: 100%;
  height: 500px;
  position: absolute;
  top: 1000px;
  background-color: transparent;
}

.font {
  font-family: 'Poiret One', cursive;
  font-size: 1.5em;
  color: black;
}

.box {
      border: 1px solid gray;
      padding-top: .5em;
      padding-bottom: .5em;
      margin-top: .5em;
  }
/*****************  Video CSS  **************************/


video#bgvid {
    position: fixed;
    top: 50%;
    left: 50%;
    min-width: 100%;
    min-height: 100%;
    width: auto;
    height: auto;
    z-index: -100;
    -ms-transform: translateX(-50%) translateY(-50%);
    -moz-transform: translateX(-50%) translateY(-50%);
    -webkit-transform: translateX(-50%) translateY(-50%);
    transform: translateX(-50%) translateY(-50%);
    background: url(polina.jpg) no-repeat;
    background-size: cover;
}


/*****************  Containers  ************************8*/


.container {
  position: fixed;
  width: 100%;
  height: 100%;
}

.gamecontainer {
  top: 500px;
  width: 100%;

  margin-left: auto;
  margin-right: auto;
  background-color: rgba (255, 255, 255, .2)
}

.partition {
  color: black;
  width: 80%;
  margin-left: 10%;
  margin-right: 10%;
  display: inline-block;
}

.partitionII {
  color: black;
  width: 100%;
}

#frm1 {
  width: 100%;
}

.container-partition {
  font-family: 'Open Sans', cursive;
  font-size: 1em;
  width: 100vw;
  height: 120vh;
  margin-top: 5vh;
  margin-bottom: -5vh;
  margin-left: 0px
  margin-right: 0px;
  line-height: 200%;
  background-color: white;
  border: 0px;
  bottom: 0;
}

/****************   Specific CSS  ***********************/


.headline {
  font-family: 'Poiret One', cursive;
  font-size: 1.5em;
  color: 	white;
  padding-top: 40px;
  width: 80%;
  margin-left: 10%;
  margin-right: 10%;
  line-height: 200%;
}

#headline2 {
  padding-left: 0;
  position: static;
}

.sexy_line_left{
    display:block;
    border:none;
    color:white;;
    height:2px;
    background:transparent;
    background: linear-gradient( 45deg, rgba(255, 255, 255, 1), rgba(255, 255, 255, 0));
}

.sexy_line_right{
    display:block;
    border:none;
    color:white;;
    height:2px;
    background:transparent;
    background: linear-gradient( 45deg, rgba(255, 255, 255, 0), rgba(255, 255, 255, 1));
}

.inputfont {
  font-family: 'Poiret One', cursive;
  font-size: 1em;
  color: white;
  background-color: rgb(219, 209, 209);
}

.welcome {
  font-family: 'Open Sans', cursive;
  font-size: 1em;
  color: white;
  padding-top: 10vh;
  width: 80%;
  margin-left: 10%;
  margin-right: 10%;
  line-height: 200%;
}

.entry {
  font-size: 200px;
  color: black;
  padding-bottom: 40px;
}

.triangle {
  width: 100%;
  text-align: center;
  color: black;
  font-size: 30px;
  font-weight: lighter;
  font-stretch: ultra-expanded;
  position: relative;
  font-size: 50px;
}

#down1 {
  position: absolute;
  top: 50%;
  left: 50%;
  height: 30%;
  margin: -70px 0px 0px -25px;
  color: rgba(255, 255, 255, 1);
  -webkit-animation: smooth 3s ease-in;
  -moz-animation: smooth 3s ease-in;
  -o-animation: smooth 3s ease-in;
  -ms-animation: smooth 3s ease-in;
  animation: smooth 3s ease-in;
  animation-iteration-count: infinite;

}

#down2 {
  position: absolute;
  top: 50%;
  left: 50%;
  height: 30%;
  margin: -60px 0px 0px -25px;
  color: rgba(255, 255, 255, 1);
  -webkit-animation: smooth 3s ease-in;
  -moz-animation: smooth 3s ease-in;
  -o-animation: smooth 3s ease-in;
  -ms-animation: smooth 3s ease-in;
  animation: smooth 3s ease-in;
  animation-delay: 1s;
  animation-iteration-count: infinite;
}

#down3 {
  position: absolute;
  top: 50%;
  left: 50%;
  height: 30%;
  margin: -50px 0px 0px -25px;
  color: rgba(255, 255, 255, 1);
  -webkit-animation: smooth 3s ease-in;
  -moz-animation: smooth 3s ease-in;
  -o-animation: smooth 3s ease-in;
  -ms-animation: smooth 3s ease-in;
  animation: smooth 3s ease-in;
  animation-delay: 2s;
  animation-iteration-count: infinite;
}

@-webkit-keyframes smooth {
  0% { opacity: 0;}
  100% { opacity: 1;}
}

.challenge {
  font-family: 'Poiret One', cursive;
  font-size: 1.5em;
  color: white;
  padding-top: 5vh;
  width: 80%;
  margin-left: 10%;
  margin-right: 10%;
  line-height: 200%;
}

.therules {
  width: 80%;
  margin-left: 10%;
  margin-right: 10%;
}

.tryit{
  width: 100%;
}

.gamecontrols {
    top: 15%;
    bottom: 15%;
    width: 80%;
    margin-top: 10vh;
    margin-bottom: 10vh;
    margin-left: auto;
    margin-right: auto;
    padding: 2.5em;
    border: 1px solid gray;
}
/******************   Button   ************************/

a {
  color: rgb(219, 209, 209);
  text-decoration: underline;
}

.btn {
  font-family: 'Poiret One', cursive;
  width: 100%;
  font-size: .8em;
  text-decoration: none;
  background-color: rgb(219, 209, 209);
  color: white;
  cursor: pointer;
  display: inline-flex;
  border: 1px solid gray;
  padding: 8px 10px 10px 10px;

}

.btn:hover {
  background: white;
  text-decoration: none;
  transform: rotateY(0deg);
  color: 	rgb(98, 71, 75);

}

.button-group:hover .icon {
  transform: rotateY(0deg);
}

.button-group {
  cursor: pointer;
  display: inline-flex;

}

.icon {
  font-size: 2em;
  width: 50px;
  height: 50px;
  line-height: 42px;
  box-sizing: border-box;
  border: 4px solid gray;
  border-left: none;
  transition: 400ms transform ease-in-out;
  transform: rotateY(90deg);
  transform-origin: left;
  text-align:center;
  padding-top: 5px;
}

.button-group {
  perspective: 250px;
  perspective-origin: calc(100% - 70px);
}

/****************Input CSS***************************/

input[type=text] {
    padding: 1px 1px 1px 10px;
    margin: 0;
    box-sizing: border-box;
    border: 1px solid gray;
    -webkit-transition: 0.5s;
    transition: 0.5s;
    outline: none;
    color: white;
    line-height: 35px;
    width: 100%;
}

input[type=text]:focus {
    border: .2em solid rgb(98, 71, 75);
    color: gray;
}


/********************    @Media    ************************/


@media screen and (max-device-width: 800px) {
    html {
         background: url(polina.jpg) #000 no-repeat center center fixed;
    }
    #bgvid {
        display: none;
    }
}

